--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">ol{margin:0;padding:0}table td,table th{padding:0}.c3{-webkit-text-decoration-skip:none;color:#1155cc;font-weight:400;text-decoration:underline;text-decoration-skip-ink:none;font-size:19pt;font-family:"MS PMincho";font-style:italic}.c0{color:#a2c4c9;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:19pt;font-family:"Arial";font-style:italic}.c1{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}.c6{color:#000000;font-weight:400;font-size:19pt;font-family:"Arial";font-style:normal}.c8{color:#a2c4c9;font-weight:700;font-size:19pt;font-family:"Arial";font-style:normal}.c2{font-size:19pt;font-family:"MS PMincho";font-style:italic;color:#a2c4c9;font-weight:400}.c5{color:#000000;font-weight:400;font-size:11pt;font-family:"Arial";font-style:normal}.c12{text-decoration-skip-ink:none;font-size:19pt;-webkit-text-decoration-skip:none;color:#1155cc;text-decoration:underline}.c7{color:#a2c4c9;font-weight:400;font-size:19pt;font-family:"Arial";font-style:normal}.c11{background-color:#ffffff;max-width:451.4pt;padding:72pt 72pt 72pt 72pt}.c9{color:inherit;text-decoration:inherit}.c4{text-decoration:none;vertical-align:baseline}.c10{height:11pt}.title{padding-top:0pt;color:#000000;font-size:26pt;padding-bottom:3pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:15pt;padding-bottom:16pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:20pt;color:#000000;font-size:20pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:18pt;color:#000000;font-size:16pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:16pt;color:#434343;font-size:14pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:14pt;color:#666666;font-size:12pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body class="c11 doc-content"><p class="c1"><span>&#21021;&#12417;&#12390;&#12398;googledog&#12398;&#32244;&#32722;&#12501;&#12449;&#12452;&#12523;&#12391;&#12377;</span></p><p class="c1"><span class="c4 c6">&#25991;&#23383;&#12434;&#22823;&#12365;&#12367;&#12375;&#12414;&#12377;</span></p><p class="c1"><span class="c7 c4">&#25991;&#23383;&#12398;&#33394;&#12434;&#22793;&#26356;&#12375;&#12414;&#12377;</span></p><p class="c1"><span class="c12"><a class="c9" href="https://www.google.com/url?q=https://www.amazon.co.jp/&amp;sa=D&amp;source=editors&amp;ust=1713944981247829&amp;usg=AOvVaw37e-9-9GYS662poNpTHxPC">&#12450;&#12510;&#12478;&#12531;</a></span><span class="c4 c7">&#12395;&#12522;&#12531;</span></p><p class="c1"><span class="c4 c8">&#25991;&#23383;&#12434;&#22826;&#12367;&#12375;&#12414;&#12377;</span></p><p class="c1"><span class="c0">&#25991;&#23383;&#12434;&#20670;&#12363;&#12379;&#12427;</span></p><p class="c1"><span class="c2 c4">&#12501;&#12457;&#12531;&#12488;&#12434;&#22793;&#12360;&#12414;&#12377;</span></p><p class="c1"><span class="c2">youtube&#12399;</span><span class="c3"><a class="c9" href="https://www.google.com/url?q=https://www.youtube.com/?hl%3Dja&amp;sa=D&amp;source=editors&amp;ust=1713944981248545&amp;usg=AOvVaw1kfzr0Y3d4Cr0qSOSZsYun">&#12371;&#12385;&#12425;</a></span></p><p class="c1"><span class="c2">yahoo&#12399;</span><span class="c3"><a class="c9" href="https://www.google.com/url?q=https://www.yahoo.co.jp/&amp;sa=D&amp;source=editors&amp;ust=1713944981248914&amp;usg=AOvVaw2lybzlVUhM98YHc0Hz79X1">&#12371;&#12385;&#12425;</a></span></p><p class="c1 c10"><span class="c2 c4"></span></p><p class="c1 c10"><span class="c8 c4"></span></p></body></html>
+<!DOCTYPE html>
+<html lang="JA">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>レジメサイト</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        .top{background-image: url(avocado-8498520_1920.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+        text-align: center;}
+        .prof{background-color: aqua;}
+        section{height: 100vh;}
+        .dela-gothic-one-regular {
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.top h1{
+    font-size: 8rem;
+    color: aqua;
+    padding-top: 30vh;
+    animation: 藤田ダイキン 3s forwards;
+    opacity: 0;
+    
+    
+}
+@keyframes 藤田ダイキン {
+0%{
+    opacity: 0;
+    transform:  translateY(100px);
+    transform: scale(1.8);
+    color: #002;
+
+}
+100%{
+    opacity: 1;
+    transform: translateY(0px);
+}
+.prof h2{
+    font-size: 8rem;
+    color: aqua;
+    padding-top: 30vh;
+    animation: .prof 3s forwards;
+    opacity: 0;
+
+}
+}
+    opacity: 0;
+    </style>
+</head>
+<body>
+<section class="top">
+<h1 class="dela-gothic-one-regula">藤田ダイキン</h1>
+ </section>  
+<section class="prof">
+    <h2 class="dela-gothic-one-regula">prof</h2>
+    <div class="box"></div>
+</section>
+</body>
+</html>
